# botticelli

./: .actor_server_state.json  .env.example  .gitignore  ACTOR_ARCHITECTURE.md  ACTOR_INTEGRATION_PROGRESS.md  ACTOR_SERVER_NEXT_STEPS.md  ACTOR_SERVER_OBSERVABILITY.md  ACT_OUTPUT_CAPTURE.md  AI_NARRATIVE_TOML_GUIDE.md  BOT_COMMAND_STATE_INTEGRATION.md  BOT_SECURITY_ANALYSIS.md  BOT_SERVER_DEPLOYMENT_PLAN.md  BOT_SERVER_NEXT_STEPS.md  BOT_SERVER_OBSERVABILITY_STRATEGY.md  CLAUDE.md  CONNECTION_POOL_INTEGRATION.md  CONTENT_GENERATION.md  Cargo.toml  DATABASE_STATE_PERSISTENCE_PLAN.md  DATABASE_TRAIT_SEPARATION_ANALYSIS.md  DISCORD_API_COVERAGE_ANALYSIS.md  DISCORD_COMMAND_TESTING_STRATEGY.md  DISCORD_COMMUNITY_SERVER_PLAN.md  DISCORD_NARRATIVE.md  DISCORD_SCHEMA.md  DISCORD_SETUP.md  DISCORD_TEARDOWN_ANALYSIS.md  ERROR_RECOVERY.md  FRIENDLY_SYNTAX_DESIGN.md  GEMINI.md  GEMINI_DEPENDENCY_ISSUE.md  GEMINI_STREAMING.md  GROQ.md  GROQ_INTEGRATION_PLAN.md  HUGGINGFACE.md  HUGGINGFACE_INTEGRATION_PLAN.md  IMPLEMENTATION_STATUS.md  INLINE_TEST_CLEANUP.md  JSON_EXTRACTION_IMPLEMENTATION.md  JSON_EXTRACTION_STRATEGY.md  (+69 more)
crates/botticelli/: Cargo.toml  README.md
crates/botticelli-database/: Cargo.toml
crates/botticelli-database/src/: content_generation_models.rs  content_generation_repository.rs  content_management.rs  lib.rs  models.rs  narrative_conversions.rs  narrative_models.rs  narrative_repository.rs  schema.rs  schema_docs.rs  schema_inference.rs  schema_reflection.rs
crates/botticelli-interface/: Cargo.toml
crates/botticelli-models/: Cargo.toml
crates/botticelli-models/tests/: gemini.rs  gemini_2_0_models_test.rs  gemini_live_basic_test.rs  gemini_live_integration_test.rs  gemini_mock_test.rs  gemini_streaming_test.rs
crates/botticelli-narrative/: Cargo.toml
crates/botticelli-narrative/narratives/: NARRATIVES.md  discord_content_examples.toml  generate_channel_posts.toml  generate_guilds.toml  generate_users.toml  no_content_generation.toml  showcase.toml
crates/botticelli-narrative/src/: content_generation.rs  core.rs  executor.rs  extraction.rs  in_memory_repository.rs  lib.rs  processor.rs  provider.rs  toml_parser.rs
crates/botticelli-rate-limit/: Cargo.toml
crates/botticelli-rate-limit/src/: detector.rs  lib.rs  limiter.rs  tier.rs  tiers.rs
crates/botticelli-rate-limit/tests/: rate_limit_config_test.rs  rate_limit_detector_test.rs
crates/botticelli-social/: Cargo.toml
crates/botticelli-storage/: Cargo.toml
crates/botticelli-storage/src/: lib.rs
crates/botticelli-storage/tests/: storage_filesystem_test.rs
crates/botticelli/src/: lib.rs  main.rs  observability.rs  telemetry.rs
crates/botticelli/tests/: cache_test.rs  discord_bot_commands_test.rs  discord_commands_test.rs  publish_welcome_test.rs  table_reference_test.rs  table_references_test.rs
crates/botticelli_actor/: AUDIT.md  Cargo.toml  README.md
crates/botticelli_actor/examples/: actor.toml  discord_poster.rs  post_scheduler.rs  post_scheduler_actor.toml
crates/botticelli_actor/src/: actor.rs  config.rs  content.rs  error.rs  execution_tracker.rs  knowledge.rs  lib.rs  platform.rs  server.rs  server_config.rs  skill.rs  state_persistence.rs
crates/botticelli_actor/tests/: actor_error_handling_test.rs  actor_error_recovery_test.rs  actor_test.rs  config_test.rs  discord_platform_test.rs  knowledge_test.rs  platform_trait_test.rs  skill_registry_test.rs  skills_test.rs
crates/botticelli_bot/: Cargo.toml
crates/botticelli_bot/src/: api.rs  config.rs  curation.rs  generation.rs  lib.rs  metrics.rs  posting.rs  server.rs
crates/botticelli_cache/: Cargo.toml
crates/botticelli_cache/src/: cache.rs  lib.rs
crates/botticelli_core/: AUDIT.md  Cargo.toml  FINAL_AUDIT.md  FIXES.md  README.md  REFACTOR.md
crates/botticelli_core/src/: budget.rs  input.rs  lib.rs  media.rs  message.rs  output.rs  request.rs  role.rs  telemetry.rs  token_counting.rs
crates/botticelli_core/tests/: budget_test.rs
crates/botticelli_error/: AUDIT.md  Cargo.toml  DERIVE_MORE_IMPLEMENTATION.md  DERIVE_MORE_OPPORTUNITIES.md  ERROR_DERIVES_ANALYSIS.md  FINAL_AUDIT.md  README.md  REFACTOR_SUMMARY.md
crates/botticelli_error/src/: backend.rs  builder.rs  config.rs  database.rs  error.rs  gemini.rs  http.rs  json.rs  lib.rs  models.rs  narrative.rs  not_implemented.rs  server.rs  storage.rs  tui.rs
crates/botticelli_interface/: AUDIT.md  Cargo.toml  FINAL_AUDIT.md  README.md
crates/botticelli_interface/src/: lib.rs  table_query_view.rs  traits.rs  types.rs
crates/botticelli_mcp/: Cargo.toml
crates/botticelli_mcp/src/: error.rs  lib.rs  server.rs
crates/botticelli_mcp/tests/: discord_tools_test.rs  execution_test.rs  validation_test.rs
crates/botticelli_mcp_client/: Cargo.toml
crates/botticelli_mcp_client/src/: approval.rs  context.rs  error.rs  lib.rs  llm_adapter.rs  metrics.rs
crates/botticelli_models/: AUDIT_REPORT.md  Cargo.toml  README.md
crates/botticelli_models/src/: lib.rs  metrics.rs  token_counting.rs
crates/botticelli_models/tests/: anthropic_api_test.rs  anthropic_model_discovery_test.rs  gemini.rs  gemini_2_0_models_test.rs  gemini_live_basic_test.rs  gemini_live_error_test.rs  gemini_live_integration_test.rs  gemini_mock_test.rs  gemini_model_test.rs  gemini_streaming_test.rs  groq_api_test.rs  huggingface_api_test.rs  ollama_client_test.rs
crates/botticelli_narrative/: AUDIT_REPORT.md  Cargo.toml  NESTED_NARRATIVE_EXECUTION.md  README.md  SEQUENTIAL_EXECUTION_DESIGN.md
crates/botticelli_narrative/narratives/: NARRATIVES.md  bot_syntax.toml  discord_content_examples.toml  discord_infrastructure.toml  generate_channel_posts.toml  generate_guilds.toml  generate_users.toml  inferred_achievements.toml  (+6 more)
crates/botticelli_security/: Cargo.toml
crates/botticelli_server/: Cargo.toml  LOCAL_INFERENCE_INTEGRATION.md  MISTRALRS_SETUP.md  MODEL_DOWNLOAD_PLAN.md  SERVER_GUIDE.md  USAGE_GUIDE.md
crates/botticelli_social/: AUDIT.md  CLAUDE_MD_AUDIT.md  Cargo.toml  DISCORD_TEST_COVERAGE.md  README.md
crates/botticelli_tui/: AUDIT.md  Cargo.toml  README.md  TUI_ARCHITECTURE_PLAN.md
(+358 files in other folders)
