[workspace]
members = [
  "crates/botticelli_error",
  "crates/botticelli_core",
  "crates/botticelli_interface",
  "crates/botticelli_rate_limit",
  "crates/botticelli_storage",
  "crates/botticelli_models",
  "crates/botticelli_database",
  "crates/botticelli_narrative",
  "crates/botticelli_social",
  "crates/botticelli_tui",
  "crates/botticelli",
  "crates/botticelli_server",
  "crates/botticelli_security",
  "crates/botticelli_cache",
  "crates/botticelli_actor",
  "crates/botticelli_bot",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
repository = "https://github.com/crumplecup/botticelli"
keywords = ["llm", "chatbot", "ai", "nlp", "api"]
categories = ["api-bindings", "asynchronous", "ai"]

[workspace.dependencies]
# Internal crates (Phase 1 foundation)
botticelli_error = { path = "crates/botticelli_error", version = "0.2.0" }
botticelli_core = { path = "crates/botticelli_core", version = "0.2.0" }
botticelli_interface = { path = "crates/botticelli_interface", version = "0.2.0" }

# Observability (OpenTelemetry)
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tokio"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32"

# Internal crates (Phase 2 rate limiting)
botticelli_rate_limit = { path = "crates/botticelli_rate_limit", version = "0.2.0" }

# Internal crates (Phase 3 storage)
botticelli_storage = { path = "crates/botticelli_storage", version = "0.2.0" }

# Internal crates (Phase 4 models)
botticelli_models = { path = "crates/botticelli_models", version = "0.2.0" }

# Internal crates (Phase 3.5 database)
botticelli_database = { path = "crates/botticelli_database", version = "0.2.0" }

# Internal crates (Phase 5 narrative)
botticelli_narrative = { path = "crates/botticelli_narrative", version = "0.2.0" }

# Internal crates (Phase 6 social)
botticelli_social = { path = "crates/botticelli_social", version = "0.2.0" }

# Internal crates (Phase 6 tui)
botticelli_tui = { path = "crates/botticelli_tui", version = "0.2.0" }

# Internal crates (local model server)
botticelli_server = { path = "crates/botticelli_server", version = "0.2.0" }

# Internal crates (bot actors)
botticelli_bot = { path = "crates/botticelli_bot", version = "0.2.0" }

# Internal crates (Phase 6 security)
botticelli_security = { path = "crates/botticelli_security", version = "0.2.0" }

# Internal crates (Phase 6 cache)
botticelli_cache = { path = "crates/botticelli_cache", version = "0.2.0" }

# Internal crates (Phase 7 facade)
botticelli = { path = "crates/botticelli", version = "0.2.0" }

# Common external dependencies (shared versions)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
async-trait = "0.1"
futures-util = "0.3"
derive_more = { version = "2", features = ["display", "from"] }
derive-new = "0.7"
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = "0.20"
strum = { version = "0.27", features = ["derive"] }

# Rate limiting and retry
governor = "0.10"
tokio-retry2 = { version = "0.7", features = ["jitter"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
regex = "1"
anyhow = "1"

# Actor system
ractor = "0.12"

# Configuration and HTTP
config = { version = "0.15", features = ["toml"] }
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "stream",
  "rustls-tls",
] }
dirs = "6"

# Storage and hashing
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

# LLM provider SDKs
gemini-rust = "1.5"
base64 = "0.22"

# WebSocket for live APIs
tokio-tungstenite = "0.28"

# Database
diesel = { version = "2", features = [
  "postgres",
  "chrono",
  "uuid",
  "serde_json",
  "64-column-tables",
  "r2d2",
] }
diesel_migrations = "2"
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Environment variables
dotenvy = "0.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
