[package]
name = "botticelli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified interface for multiple LLM APIs with multimodal support, narrative execution, and content management"

[dependencies]
# Core crates (always included)
botticelli_error = { workspace = true }
botticelli_core = { workspace = true }
botticelli_interface = { workspace = true }
botticelli_rate_limit = { workspace = true }
botticelli_storage = { workspace = true }
botticelli_narrative = { workspace = true }

# Optional crates
botticelli_models = { workspace = true, optional = true }
botticelli_database = { workspace = true, optional = true }
botticelli_social = { workspace = true, optional = true }
botticelli_tui = { workspace = true, optional = true }
botticelli_server = { workspace = true, optional = true }

# Binary dependencies
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }
dirs = { workspace = true }

# TUI dependencies (optional, only when both tui and server features are enabled)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
dotenvy.workspace = true

[features]
default = []

# LLM provider features
gemini = ["botticelli_models", "botticelli_models/gemini"]

# Database feature
database = ["botticelli_database", "botticelli_narrative/database"]

# Social platform features
discord = ["botticelli_social", "botticelli_social/discord"]

# TUI feature
tui = ["botticelli_tui", "botticelli_database", "dep:ratatui", "dep:crossterm"]

# Local model server feature
server = ["botticelli_server"]

# Convenience feature for all providers
all-providers = ["gemini"]

# Testing feature flags
api = [] # Empty marker feature to gate API-consuming tests
local = [
  "gemini",
  "database",
  "discord",
  "tui",
  "server",
] # All features except api

# Convenience feature for all optional features
all = ["gemini", "database", "discord", "tui", "server"]

[dev-dependencies]
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
botticelli_cache = { workspace = true }
diesel = { workspace = true, features = ["postgres"] }

[[bin]]
name = "botticelli"
path = "src/main.rs"
