[package]
name = "botticelli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified interface for multiple LLM APIs with multimodal support, narrative execution, and content management"

[dependencies]
# Core crates (always included)
botticelli_error = { workspace = true }
botticelli_core = { workspace = true }
botticelli_interface = { workspace = true }
botticelli_rate_limit = { workspace = true }
botticelli_storage = { workspace = true }
botticelli_narrative = { workspace = true }

# Optional crates
botticelli_models = { workspace = true, optional = true }
botticelli_database = { workspace = true, optional = true }
botticelli_social = { workspace = true, optional = true }
botticelli_tui = { workspace = true, optional = true }
botticelli_bot = { workspace = true, optional = true }

# Binary dependencies
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }
dirs = { workspace = true }
ractor = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }

# OpenTelemetry dependencies (optional)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
opentelemetry-prometheus = { version = "0.17", optional = true }
prometheus = { version = "0.13", optional = true }
hyper = { version = "1.5", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

# TUI dependencies (optional, only when both tui and server features are enabled)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
dotenvy.workspace = true
opentelemetry-stdout = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[features]
default = []

# LLM provider features
gemini = ["botticelli_models", "botticelli_models/gemini"]

# Database feature
database = ["botticelli_database", "botticelli_narrative/database", "dep:ractor"]

# Social platform features
discord = ["botticelli_social", "botticelli_social/discord", "botticelli_social/database"]

# TUI feature
tui = ["botticelli_tui", "botticelli_database", "dep:ratatui", "dep:crossterm"]

# Bot server feature (generation/curation/posting actors)
bots = ["botticelli_bot", "gemini", "database", "discord", "dep:diesel"]

# Observability feature (OpenTelemetry integration)
observability = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-stdout",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-prometheus",
  "dep:prometheus",
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
]

# OTLP exporter for production observability
otel-otlp = [
  "observability",
  "dep:opentelemetry-otlp",
]

# Convenience feature for all providers
all-providers = ["gemini"]

# Testing feature flags
api = [] # Empty marker feature to gate API-consuming tests
local = [
  "gemini",
  "database",
  "discord",
  "tui",
  "bots",
] # All features except api

# Convenience feature for all optional features
all = ["gemini", "database", "discord", "tui", "bots"]
opentelemetry-stdout = ["dep:opentelemetry-stdout"]
tracing-opentelemetry = ["dep:tracing-opentelemetry"]

[dev-dependencies]
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
botticelli_cache = { workspace = true }
diesel = { workspace = true, features = ["postgres"] }

[[bin]]
name = "botticelli"
path = "src/main.rs"
