[package]
name = "botticelli_actor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
cron = "0.12"
derive-getters = "0.5"
derive_more = { workspace = true }
derive_setters = "0.1"
derive_builder = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
r2d2 = "0.8"
ractor = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

botticelli_database = { path = "../botticelli_database" }
botticelli_error = { path = "../botticelli_error" }
botticelli_interface = { path = "../botticelli_interface" }
botticelli_models = { path = "../botticelli_models", features = ["gemini"] }
botticelli_narrative = { path = "../botticelli_narrative", features = ["database"] }
botticelli_server = { path = "../botticelli_server" }
botticelli_social = { path = "../botticelli_social", features = ["database", "discord"], optional = true }

# Optional main crate for observability
botticelli = { path = "../botticelli", optional = true, default-features = false }

# Optional Discord platform support
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

[features]
default = []
discord = ["serenity", "botticelli_social"]
local = ["discord"]
observability = ["botticelli", "botticelli/observability"]
otel-otlp = ["observability", "botticelli/otel-otlp"]

[[example]]
name = "discord_poster"
required-features = ["discord"]

[[example]]
name = "post_scheduler"
required-features = ["discord"]

[dev-dependencies]
dotenvy = { workspace = true }
tempfile = "3"
tracing-subscriber = "0.3"
uuid = { workspace = true, features = ["v4"] }
