[package]
name = "botticelli_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
