[package]
name = "botticelli_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data types for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "from"] }
