[package]
name = "botticelli_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data types for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "from"] }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
derive_builder = { workspace = true }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-stdout = "0.31"
tracing-opentelemetry = "0.32"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
