[package]
name = "botticelli_error"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Error types for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from", "display", "error"] }

# Optional database error conversions
diesel = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
database = ["dep:diesel", "dep:serde_json"]
tui = []
