[package]
name = "botticelli_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Trait definitions for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
botticelli_core = { workspace = true }
botticelli_error = { workspace = true }
botticelli_storage = { workspace = true }
