[package]
name = "botticelli_mcp_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
botticelli_core.workspace = true
botticelli_error.workspace = true
botticelli_interface.workspace = true
botticelli_mcp = { path = "../botticelli_mcp", version = "0.1.0" }

async-trait.workspace = true
derive-getters.workspace = true
derive_more.workspace = true
prometheus = "0.13"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-builder = "0.20"
