[package]
name = "botticelli_models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LLM provider integrations for Botticelli"

[dependencies]
botticelli_error = { workspace = true }
botticelli_core = { workspace = true }
botticelli_interface = { workspace = true }
botticelli_rate_limit = { workspace = true, features = [] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# HTTP and serialization
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
opentelemetry = { workspace = true }

# Retry
tokio-retry2 = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# Feature-gated provider SDKs
gemini-rust = { workspace = true, optional = true }

[features]
default = []
gemini = ["dep:gemini-rust", "botticelli_rate_limit/gemini"]
anthropic = ["botticelli_rate_limit/anthropic"]
huggingface = []
groq = []
perplexity = []
api = []  # Marker feature for tests that make real API calls

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
